[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/Command/Command.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/InterStage.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/next_stage.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/move.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/no_energy.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="InterStage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.0
margin_top = 8.0
margin_right = 42.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
text = "shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CryptoCount" type="Label" parent="."]
margin_left = 9.5
margin_top = 6.5
margin_right = 113.5
margin_bottom = 30.5
custom_fonts/font = SubResource( 3 )
text = "Crypto : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
margin_left = 7.0
margin_top = 33.0
margin_right = 111.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 6 )
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 120 )
scale = Vector2( 2, 2 )

[node name="CommandMid" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 120 )
scale = Vector2( 2, 2 )

[node name="CommandRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 120 )
scale = Vector2( 2, 2 )

[node name="PriceLeft" type="Label" parent="."]
margin_left = 120.0
margin_top = 160.0
margin_right = 200.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "( 2 )"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceMid" type="Label" parent="."]
margin_left = 280.0
margin_top = 160.0
margin_right = 360.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "( 2 )"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceRight" type="Label" parent="."]
margin_left = 440.0
margin_top = 160.0
margin_right = 520.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "( 2 )"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealth" type="Button" parent="."]
margin_left = 85.0
margin_top = 220.0
margin_right = 235.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MaxHealth"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 2 )
text = "Increase
Max Health
( 1 )"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MaxEnergy" type="Button" parent="."]
margin_left = 245.0
margin_top = 220.0
margin_right = 395.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MaxEnergy"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Increase
Max Energy
( 2 )"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RemoveError" type="Button" parent="."]
margin_left = 405.0
margin_top = 220.0
margin_right = 555.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RemoveError"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Remove
An Error
( 5 )"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Health" type="Label" parent="."]
margin_left = 85.0
margin_top = 320.0
margin_right = 235.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.898039, 0.231373, 0.266667, 1 )
text = "0 / 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="Label" parent="."]
margin_left = 245.0
margin_top = 320.0
margin_right = 395.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0156863, 0.517647, 0.819608, 1 )
text = "0 / 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="."]
margin_left = 405.0
margin_top = 320.0
margin_right = 555.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.145098, 0.145098, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextStageSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="NoEnergySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="input_event" from="CommandLeft" to="." method="_on_CommandLeft_input_event"]
[connection signal="input_event" from="CommandMid" to="." method="_on_CommandMid_input_event"]
[connection signal="input_event" from="CommandRight" to="." method="_on_CommandRight_input_event"]
[connection signal="pressed" from="MaxHealth" to="." method="_on_MaxHealth_pressed"]
[connection signal="pressed" from="MaxEnergy" to="." method="_on_MaxEnergy_pressed"]
[connection signal="pressed" from="RemoveError" to="." method="_on_RemoveError_pressed"]
